<resources>
    <string name="app_name">androidMyProject</string>

    <string name="nav_home">Home</string>
    <string name="nav_new">New</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create">Create</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_your_comfort_food_here">Find your Comfort Food here</string>
    <string name="here_you_can_find_a_chef_or_dish_for_every_taste_and_color_enjoy">Here You Can find a chef or dish for every taste and color. Enjoy!</string>
    <string name="next">Next</string>
    <string name="food_ninja_is_where_your_comfort_food_lives">Food Ninja is Where Your Comfort Food Lives</string>
    <string name="enjoy_a_fast_and_smooth_food_delivery_at_your_doorstep">Enjoy a fast and smooth food delivery at your doorstep</string>
    <string name="sign_up_for_free">Sign Up For Free</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">already have an account?</string>
    <string name="keep_me_signed_in">Keep Me Signed In</string>
    <string name="email_me_about_special_pricing">Email Me About Special Pricing</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="login_to_your_account">Login To Your Account</string>
    <string name="find_your_favorite_food">Find Your \nFavorite Food</string>
    <string name="what_do_you_want_to_order">What do you want to order?</string>
</resources>